--- a/src/languages/cn.json
+++ b/src/languages/cn.json
@@ -219,8 +219,8 @@
   "real_estate_images": "房地产图片",
   "update_image_to_maximum": "最多更新两张图片",
   "do_you_agree": "您是否同意 Saveloka 的条款和政策？",
-  "add_room_type": "添加房间类型",
-  "room_type_title": "房间类型标题",
+  "add_room": "添加房间",
+  "room_title": "房间标题",
   "enter_room_type": "输入房间类型标题",
   "select_bed_type": "选择床型",
   "select_service": "选择服务",
