--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -222,8 +222,8 @@
     "real_estate_images":"Real estate images",
     "update_image_to_maximum":"Update images to a maximum of two images",
     "do_you_agree":"Do you agree with the terms and policy of Saveloka?",
-    "add_room_type":"Add room type",
-    "room_type_title":"Room type title",
+    "add_room":"Add room",
+    "room_title":"Room title",
     "enter_room_type":"Enter room type title",
     "select_bed_type":"Select bed type",
     "select_service":"Select service",
