--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -219,8 +219,8 @@
   "real_estate_images": "Gambar Properti",
   "update_image_to_maximum": "Perbarui gambar hingga maksimal dua gambar",
   "do_you_agree": "Apakah Anda setuju dengan syarat dan kebijakan Saveloka?",
-  "add_room_type": "Tambahkan jenis kamar",
-  "room_type_title": "Judul jenis kamar",
+  "add_room": "Tambahkan ruangan",
+  "room_title": "Judul ruangan",
   "enter_room_type": "Masukkan judul jenis kamar",
   "select_bed_type": "Pilih jenis tempat tidur",
   "select_service": "Pilih layanan",
