--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -219,8 +219,8 @@
   "real_estate_images": "Imej hartanah",
   "update_image_to_maximum": "Kemaskini imej maksimum dua imej",
   "do_you_agree": "Adakah anda bersetuju dengan syarat dan polisi Saveloka?",
-  "add_room_type": "Tambah jenis bilik",
-  "room_type_title": "Tajuk jenis bilik",
+  "add_room": "Tambah bilik",
+  "room_title": "Tajuk bilik",
   "enter_room_type": "Masukkan tajuk jenis bilik",
   "select_bed_type": "Pilih jenis katil",
   "select_service": "Pilih perkhidmatan",
