--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -214,8 +214,8 @@
   "real_estate_images": "Mga Larawan ng Real Estate",
   "update_image_to_maximum": "I-update ang mga larawan sa isang maximum na dalawang larawan",
   "do_you_agree": "Sumasang-ayon ka ba sa mga tuntunin at patakaran ng Saveloka?",
-  "add_room_type": "Magdagdag ng uri ng kwarto",
-  "room_type_title": "Pamagat ng uri ng kwarto",
+  "add_room": "Magdagdag ng silid",
+  "room_title": "Pamagat ng kuwarto",
   "enter_room_type": "Ilagay ang pamagat ng uri ng kwarto",
   "select_bed_type": "Pumili ng uri ng kama",
   "select_service": "Pumili ng serbisyo",
