--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -219,8 +219,8 @@
   "real_estate_images": "รูปภาพบริษัทอสังหาริมทรัพย์",
   "update_image_to_maximum": "อัปเดตรูปภาพไปยังสูงสุดสองภาพ",
   "do_you_agree": "คุณเห็นด้วยกับข้อกำหนดและนโยบายของ Saveloka หรือไม่?",
-  "add_room_type": "เพิ่มประเภทห้อง",
-  "room_type_title": "ชื่อประเภทห้อง",
+  "add_room": "เพิ่มห้อง",
+  "room_title": "หัวข้อห้อง",
   "enter_room_type": "กรอกชื่อประเภทห้อง",
   "select_bed_type": "เลือกประเภทเตียง",
   "select_service": "เลือกบริการ",
