--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -220,8 +220,8 @@
   "real_estate_images": "Ảnh bất động sản",
   "update_image_to_maximum": "Cập nhật hình ảnh tối đa hai ảnh",
   "do_you_agree": "Bạn đồng ý với điều khoản và chính sách của Saveloka?",
-  "add_room_type": "Thêm loại phòng",
-  "room_type_title": "Tiêu đề loại phòng",
+  "add_room": "Thêm phòng",
+  "room_title": "Tiêu đề phòng",
   "enter_room_type": "Nhập tiêu đề loại phòng",
   "select_bed_type": "Chọn loại giường",
   "select_service": "Chọn dịch vụ",
