--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -284,5 +284,81 @@
     "picture_video":"Picture and video",
     "link_youtube":"Link youtube",
     "link_tiktok":"Link tiktok",
-    "name":"Name"
+    "name":"Name",
+    "tour_by_topic":"Tour by topic",
+    "emigrate":"Emigrate",
+    "world":"World",
+    "find_recommend_tour":"Find Recommended Tour",
+    "package_tour_aboard":"Package tour aboard",
+    "discover_package_family":"Discover the 5D4D package tour for families!!",
+    "themed_tour":"Themed tours",
+    "discover_tour_youlove":"Discover the type of tour you love",
+    "travel_around_world":"Travel around the world",
+    "discover_more_tour":"Discover more tours",
+    "the_place_discovery":"The places are extremely worth the discovery",
+    "dosmestic_destination":"Domestic destination",
+    "international_destination":"International destination",
+    "watch_the_most":"Watch the most vivid videos about the place you want to travel",
+    "lastest_tour":"Latest tour date",
+    "hour":"Hours",
+    "ticket_option":"Ticket option",
+    "see_detail":"See details",
+    "easy_refund":"Easy refund",
+    "easy_reschdule":"Easy Reschedule",
+    "select_ticket":"Select tickets",
+    "trip_highlight":"Trip highlights",
+    "tour_schedule":"Tour schedule",
+    "find_tour":"Find tour",
+    "best_price_from":"Best price from",
+    "room_information":"Room information",
+    "little_convenient":"Little convenient",
+    "price_detail":"Price detail",
+    "room_rate":"Room rates",
+    "taxes_and_fees":"Taxes and fees",
+    "total":"Total",
+    "request_to_book":"Request to BOOK",
+    "room_detail":"Room detail",
+    "book":"BOOK",
+    "contact_detail":"Contact details",
+    "choose_time":"Choose time",
+    "use_coupon":"Use Coupons",
+    "adult":"Adult",
+    "children":"Children",
+    "add_number_guest":"Add the number of guests",
+    "adult_year_old":"Adult (12-60 Year old)",
+    "children_year_old":"Children (4-11 Year old)",
+    "things_need_to_know":" Things you need to know",
+    "inexperienced":"Inexperienced",
+    "inseparable":"Inseparable",
+    "no_reservation":"No reservation",
+    "include_addition":"Included additional surcharges",
+    "price_include":"The price included",
+    "carriage":"Carriage",
+    "round_trip":"Round - trip shuttle",
+    "high_speed":"High speed train",
+    "tour_guide":"Tour guide",
+    "thai_english":"Thai - English speaking tour guide",
+    "meal":"Meals",
+    "light_breakfast":"Light breakfast",
+    "lunch_option":"Lunch optional style (available vegetarian choice)",
+    "service_supple":"Services/supplements",
+    "divine_mask":"Diving mask and life jacket",
+    "admission_fee":"Admission fee",
+    "insurance_provide":"Insurance provided by the operator",
+    "soft_drink":"Soft drink",
+    "seasonal_fruits":"Seasonal fruits",
+    "cake_and_snack":"Cakes and snacks price does not include",
+    "other_personal":"Other personal expenses",
+    "tip":"Tip",
+    "voucher_validity":"Voucher validity",
+    "use_selected_date":"Use on the selected date",
+    "valid_normally":"Valid every day normally",
+    "valid_holiday":"Valid every holiday",
+    "conversion_method":"Conversion method",
+    "do_not_need_book":"You do not need to book before coming",
+    "input_directly":"Input directly",
+    "after_confirming":"After confirming the reservation, you can see the service voucher in my reservation page or via email",
+    "when_coming":"When coming, just submit the service on the phone for the staff at the entrance is done",
+    "no_need_print_card":"No need to print payment cards",
+    "just_present_electronic":"Just present the electronic ticket/payment card on your phone when converted or entered the door. Please adjust the appropriate screen brightness."
 }
