--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -281,5 +281,81 @@
   "picture_video": "Foto dan Video",
   "link_youtube": "Tautan YouTube",
   "link_tiktok": "Tautan TikTok",
-  "name": "Nama"
+  "name": "Nama",
+  "tour_by_topic": "Tur berdasarkan topik",
+"emigrate": "Beremigrasi",
+"world": "Dunia",
+"find_recommend_tour": "Temukan Tur yang Direkomendasikan",
+"package_tour_aboard": "Paket tur di luar negeri",
+"discover_package_family": "Temukan paket tur keluarga 5D4D !!",
+"themed_tour": "Tur Berdasarkan Tema",
+"discover_tour_youlove": "Temukan jenis tur yang Anda suka",
+"travel_around_world": "Wisata keliling dunia",
+"discover_more_tour": "Temukan lebih banyak tur",
+"the_place_discovery": "Tempat-tempat sangat layak untuk ditemukan",
+"dosmestic_destination": "Tujuan dalam negeri",
+"international_destination": "Tujuan internasional",
+"watch_the_most": "Tonton video paling hidup tentang tempat yang ingin Anda kunjungi",
+"lastest_tour": "Tanggal tur terbaru",
+"hour": "Jam",
+"ticket_option": "Pilihan tiket",
+"see_detail": "Lihat detail",
+"easy_refund": "Pengembalian uang mudah",
+"easy_reschedule": "Penjadwalan ulang mudah",
+"select_ticket": "Pilih tiket",
+"trip_highlight": "Sorotan perjalanan",
+"tour_schedule": "Jadwal tur",
+"find_tour": "Temukan tur",
+"best_price_from": "Harga terbaik dari",
+"room_information": "Informasi Kamar",
+"little_convenient": "Sedikit Nyaman",
+"price_detail": "Detail Harga",
+"room_rate": "Tarif Kamar",
+"taxes_and_fees": "Pajak dan Biaya",
+"total": "Total",
+"request_to_book": "Permintaan untuk PESAN",
+"room_detail": "Detail Kamar",
+"book": "PESAN",
+"contact_detail": "Detail Kontak",
+"choose_time": "Pilih Waktu",
+"use_coupon": "Gunakan Kupon",
+"adult": "Dewasa",
+"children": "Anak-anak",
+"add_number_guest": "Tambah jumlah tamu",
+"adult_year_old": "Dewasa (12-60 tahun)",
+"children_year_old": "Anak-anak (4-11 tahun)",
+"things_need_to_know": "Hal yang perlu diketahui",
+"inexperienced": "Belum berpengalaman",
+"inseparable": "Tidak terpisahkan",
+"no_reservation": "Tidak ada reservasi",
+"include_addition": "Termasuk biaya tambahan",
+"price_include": "Harga termasuk",
+"carriage": "Kereta kuda",
+"round_trip": "Shuttle bolak-balik",
+"high_speed": "Kereta cepat",
+"tour_guide": "Pemandu wisata",
+"thai_english": "Pemandu wisata yang berbicara dalam bahasa Thai - Inggris",
+"meal": "Makanan",
+"light_breakfast": "Sarapan ringan",
+"lunch_option": "Pilihan makan siang (tersedia pilihan vegetarian)",
+"service_supple": "Layanan/suplemen",
+"divine_mask": "Topeng selam dan jaket pelampung",
+"admission_fee": "Biaya masuk",
+"insurance_provide": "Asuransi yang disediakan oleh operator",
+"soft_drink": "Minuman ringan",
+"seasonal_fruits": "Buah-buahan musiman",
+"cake_and_snack": "Harga kue dan camilan tidak termasuk",
+"other_personal": "Biaya pribadi lainnya",
+"tip": "Tip",
+"voucher_validity": "Kesesuaian voucher",
+"use_selected_date": "Gunakan pada tanggal yang dipilih",
+"valid_normally": "Berlaku setiap hari biasanya",
+"valid_holiday": "Berlaku setiap hari libur",
+"conversion_method": "Metode konversi",
+"do_not_need_book": "Anda tidak perlu memesan sebelum datang",
+"input_directly": "Input langsung",
+"after_confirming": "Setelah mengonfirmasi reservasi, Anda dapat melihat voucher layanan di halaman reservasi saya atau melalui email",
+"when_coming": "Saat datang, cukup serahkan layanan di telepon untuk staf di pintu masuk",
+"no_need_print_card": "Tidak perlu mencetak kartu pembayaran",
+"just_present_electronic": "Hanya persembahkan tiket/ kartu pembayaran elektronik di telepon Anda saat dikonversi atau memasuki pintu. Mohon atur kecerahan layar yang sesuai."
 }
