--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -276,5 +276,81 @@
   "picture_video": "Larawan at Bideo",
   "link_youtube": "Koneksyon sa YouTube",
   "link_tiktok": "Koneksyon sa TikTok",
-  "name": "Pangalan"
+  "name": "Pangalan",
+  "tour_by_topic": "Tour ayon sa paksa",
+"emigrate": "Emigrasyon",
+"world": "Mundo",
+"find_recommend_tour": "Hanapin ang Inirerekumendang Tour",
+"package_tour_aboard": "Package tour sa labas",
+"discover_package_family": "Tuklasin ang 5D4D na package tour para sa pamilya!!",
+"themed_tour": "Temang tour",
+"discover_tour_youlove": "Tuklasin ang uri ng tour na gusto mo",
+"travel_around_world": "Maglakbay sa buong mundo",
+"discover_more_tour": "Tuklasin ang higit pang mga tour",
+"the_place_discovery": "Ang mga lugar ay lubos na karapat-dapat na matuklasan",
+"dosmestic_destination": "Domestikong destinasyon",
+"international_destination": "Internasyonal na destinasyon",
+"watch_the_most": "Manood ng pinakamalalabong video tungkol sa lugar na nais mong puntahan",
+"lastest_tour": "Pinakabagong petsa ng tour",
+"hour": "Oras",
+"ticket_option": "Pagpipilian ng tiket",
+"see_detail": "Tingnan ang detalye",
+"easy_refund": "Madaling ibalik ang pera",
+"easy_reschedule": "Madaling baguhin ang petsa",
+"select_ticket": "Pumili ng tiket",
+"trip_highlight": "Mga highlights ng biyahe",
+"tour_schedule": "Iskedyul ng tour",
+"find_tour": "Hanapin ang tour",
+"best_price_from": "Pinakamahusay na presyo mula sa",
+"room_information": "Impormasyon ng Kuwarto",
+"little_convenient": "Maliit na Kaliwangan",
+"price_detail": "Detalye ng Presyo",
+"room_rate": "Rate ng Kuwarto",
+"taxes_and_fees": "Mga Buwis at Bayad",
+"total": "Kabuuan",
+"request_to_book": "Humiling ng PAG-BOOK",
+"room_detail": "Detalye ng Kuwarto",
+"book": "BOOK",
+"contact_detail": "Detalye ng Pakikipag-ugnayan",
+"choose_time": "Pumili ng Oras",
+"use_coupon": "Gamitin ang Kupunang Pambawas",
+"adult": "Matanda",
+"children": "Bata",
+"add_number_guest": "Magdagdag ng bilang ng mga bisita",
+"adult_year_old": "Matanda (12-60 taong gulang)",
+"children_year_old": "Bata (4-11 taong gulang)",
+"things_need_to_know": "Mga bagay na kailangan mong malaman",
+"inexperienced": "Walang karanasan",
+"inseparable": "Di-mahiwalay",
+"no_reservation": "Walang reserbasyon",
+"include_addition": "Kasama ang mga karagdagang bayad",
+"price_include": "Kasama sa presyo",
+"carriage": "Sasakyan",
+"round_trip": "Round-trip shuttle",
+"high_speed": "Mataas na bilis na tren",
+"tour_guide": "Tagapaglakbay",
+"thai_english": "Tagapaglakbay na nagsasalita ng Thai-Ingles",
+"meal": "Mga pagkain",
+"light_breakfast": "Magagaang almusal",
+"lunch_option": "Lunch optional style (may vegetarian choice)",
+"service_supple": "Serbisyo/supplement",
+"divine_mask": "Maskara sa diving at life jacket",
+"admission_fee": "Bayad sa pagsusuri",
+"insurance_provide": "Seguro na ibinibigay ng operator",
+"soft_drink": "Soft drink",
+"seasonal_fruits": "Mga prutas sa panahon",
+"cake_and_snack": "Presyo ng mga cake at mga meryenda ay hindi kasama",
+"other_personal": "Iba pang personal na gastos",
+"tip": "Tip",
+"voucher_validity": "Validiti ng voucher",
+"use_selected_date": "Gamitin sa napiling petsa",
+"valid_normally": "Karaniwang bawat araw na valid",
+"valid_holiday": "Valid kada holiday",
+"conversion_method": "Paraan ng konbersyon",
+"do_not_need_book": "Hindi mo kailangang mag-book bago dumating",
+"input_directly": "Mag-input nang direkta",
+"after_confirming": "Pagkumpirmahin ang reservation, maaari mong makita ang voucher ng serbisyo sa aking pahina ng reservation o sa pamamagitan ng email",
+"when_coming": "Kapag dumating, magsumite lamang ng serbisyo sa telepono para sa mga tauhan sa pinto",
+"no_need_print_card": "Hindi kailangang i-print ang mga card ng pagbabayad",
+"just_present_electronic": "I-present lamang ang elektronikong tiket/card sa iyong telepono kapag nag-convert o pumasok sa pinto. Paki-ayos lamang ang angkop na liwanag ng screen."
 }
