--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -281,5 +281,81 @@
   "picture_video": "รูปภาพและวิดีโอ",
   "link_youtube": "ลิงก์ยูทูป",
   "link_tiktok": "ลิงก์ทิกท็อก",
-  "name": "ชื่อ"
+  "name": "ชื่อ",
+  "tour_by_topic": "ทัวร์ตามหัวข้อ",
+"emigrate": "ย้ายถิ่นฐาน",
+"world": "โลก",
+"find_recommend_tour": "ค้นหาทัวร์แนะนำ",
+"package_tour_aboard": "ทัวร์แพ็คเกจต่างประเทศ",
+"discover_package_family": "ค้นพบแพ็คเกจทัวร์สำหรับครอบครัว 5D4D !!",
+"themed_tour": "ทัวร์ตามหัวข้อ",
+"discover_tour_youlove": "ค้นพบประเภททัวร์ที่คุณรัก",
+"travel_around_world": "เดินทางรอบโลก",
+"discover_more_tour": "ค้นพบทัวร์เพิ่มเติม",
+"the_place_discovery": "สถานที่มีค่ามากที่ควรค้นพบ",
+"dosmestic_destination": "ปลายทางในประเทศ",
+"international_destination": "ปลายทางระหว่างประเทศ",
+"watch_the_most": "รับชมวิดีโอที่สดใสที่สุดเกี่ยวกับสถานที่ที่คุณต้องการเดินทาง",
+"lastest_tour": "วันทัวร์ล่าสุด",
+"hour": "ชั่วโมง",
+"ticket_option": "ตัวเลือกตั๋ว",
+"see_detail": "ดูรายละเอียด",
+"easy_refund": "คืนเงินง่าย",
+"easy_reschedule": "เปลี่ยนวันเวลาได้ง่าย",
+"select_ticket": "เลือกตั๋ว",
+"trip_highlight": "จุดเด่นของทริป",
+"tour_schedule": "กำหนดการทัวร์",
+"find_tour": "ค้นหาทัวร์",
+"best_price_from": "ราคาที่ดีที่สุดจาก",
+"room_information": "ข้อมูลห้องพัก",
+"little_convenient": "ไม่สะดวกน้อย",
+"price_detail": "รายละเอียดราคา",
+"room_rate": "อัตราห้องพัก",
+"taxes_and_fees": "ภาษีและค่าธรรมเนียม",
+"total": "รวมทั้งสิ้น",
+"request_to_book": "ขอจอง",
+"room_detail": "รายละเอียดห้องพัก",
+"book": "จอง",
+"contact_detail": "รายละเอียดการติดต่อ",
+"choose_time": "เลือกเวลา",
+"use_coupon": "ใช้คูปอง",
+"adult": "ผู้ใหญ่",
+"children": "เด็ก",
+"add_number_guest": "เพิ่มจำนวนแขก",
+"adult_year_old": "ผู้ใหญ่ (12-60 ปี)",
+"children_year_old": "เด็ก (4-11 ปี)",
+"things_need_to_know": "สิ่งที่คุณต้องรู้",
+"inexperienced": "ไม่มีประสบการณ์",
+"inseparable": "ไม่สามารถแยกได้",
+"no_reservation": "ไม่มีการจอง",
+"include_addition": "รวมค่าธรรมเนียมเพิ่มเติม",
+"price_include": "ราคาที่รวมแล้ว",
+"carriage": "การเดินทาง",
+"round_trip": "รถรับส่งไป-กลับ",
+"high_speed": "รถไฟความเร็วสูง",
+"tour_guide": "ไกด์ทัวร์",
+"thai_english": "ไกด์ทัวร์พูดภาษาไทย - อังกฤษ",
+"meal": "อาหาร",
+"light_breakfast": "อาหารเช้าเบา ๆ",
+"lunch_option": "รูปแบบอาหารกลางวันที่เลือกได้ (มีตัวเลือกมังสวิรัติ)",
+"service_supple": "บริการ/เสริม",
+"divine_mask": "หน้ากากดำน้ำและเสื้อชูชีพ",
+"admission_fee": "ค่าเข้าชม",
+"insurance_provide": "ประกันภัยที่ให้โดยผู้ประกอบการ",
+"soft_drink": "เครื่องดื่มอ่อน",
+"seasonal_fruits": "ผลไม้ฤดูกาล",
+"cake_and_snack": "ราคาเค้กและของว่างไม่รวม",
+"other_personal": "ค่าใช้จ่ายส่วนบุคคลอื่น ๆ",
+"tip": "เคล็ดลับ",
+"voucher_validity": "ความถูกต้องของบัตร",
+"use_selected_date": "ใช้ในวันที่เลือก",
+"valid_normally": "สมบูรณ์ทุกวันโดยปกติ",
+"valid_holiday": "สมบูรณ์ในวันหยุดทุกวัน",
+"conversion_method": "วิธีการแปลง",
+"do_not_need_book": "คุณไม่จำเป็นต้องจองก่อนมา",
+"input_directly": "ป้อนโดยตรง",
+"after_confirming": "หลังจากยืนยันการจองแล้ว คุณสามารถดูบัตรบริการได้ในหน้าการจองของฉันหรือทางอีเมล",
+"when_coming": "เมื่อมาถึง แค่ส่งบริการทางโทรศัพท์ให้พนักงานที่ประตูแล้วเสร็จ",
+"no_need_print_card": "ไม่จำเป็นต้องพิมพ์บัตรชำระเงิน",
+"just_present_electronic": "เพียงแค่นำบัตร/บัตรชำระเงินอิเล็กทรอนิกส์บนโทรศัพท์ของคุณมาเมื่อแปลงหรือเข้าประตู โปรดปรับความสว่างของหน้าจอให้เหมาะสม"
 }
