--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -281,5 +281,81 @@
   "picture_video": "Ảnh và video",
   "link_youtube": "Liên kết Youtube",
   "link_tiktok": "Liên kết TikTok",
-  "name": "Tên"
+  "name": "Tên",
+  "tour_by_topic": "Tour theo chủ đề",
+"emigrate": "Di cư",
+"world": "Thế giới",
+"find_recommend_tour": "Tìm Tour Được Khuyến Nghị",
+"package_tour_aboard": "Tour Gói Nước Ngoài",
+"discover_package_family": "Khám Phá Tour Gia Đình 5D4D !!",
+"themed_tour": "Tour Theo Chủ Đề",
+"discover_tour_youlove": "Khám Phá Loại Tour Bạn Yêu Thích",
+"travel_around_world": "Du Lịch Quanh Thế Giới",
+"discover_more_tour": "Khám Phá Thêm Các Tour",
+"the_place_discovery": "Những địa điểm rất đáng khám phá",
+"dosmestic_destination": "Điểm đến Trong Nước",
+"international_destination": "Điểm đến Quốc Tế",
+"watch_the_most": "Xem các video sống động nhất về địa điểm bạn muốn du lịch",
+"lastest_tour": "Ngày tour mới nhất",
+"hour": "Giờ",
+"ticket_option": "Tùy chọn vé",
+"see_detail": "Xem chi tiết",
+"easy_refund": "Hoàn tiền dễ dàng",
+"easy_reschedule": "Đổi lịch dễ dàng",
+"select_ticket": "Chọn vé",
+"trip_highlight": "Những điểm nổi bật của chuyến đi",
+"tour_schedule": "Lịch trình tour",
+"find_tour": "Tìm tour",
+"best_price_from": "Giá tốt nhất từ",
+"room_information": "Thông tin phòng",
+"little_convenient": "Ít tiện nghi",
+"price_detail": "Chi tiết giá",
+"room_rate": "Giá phòng",
+"taxes_and_fees": "Thuế và phí",
+"total": "Tổng cộng",
+"request_to_book": "Yêu cầu ĐẶT PHÒNG",
+"room_detail": "Chi tiết phòng",
+"book": "ĐẶT",
+"contact_detail": "Chi tiết liên hệ",
+"choose_time": "Chọn thời gian",
+"use_coupon": "Sử dụng Phiếu giảm giá",
+"adult": "Người lớn",
+"children": "Trẻ em",
+"add_number_guest": "Thêm số lượng khách",
+"adult_year_old": "Người lớn (12-60 tuổi)",
+"children_year_old": "Trẻ em (4-11 tuổi)",
+"things_need_to_know": "Những điều cần biết",
+"inexperienced": "Không có kinh nghiệm",
+"inseparable": "Không thể tách rời",
+"no_reservation": "Không có đặt chỗ",
+"include_addition": "Bao gồm các khoản phụ thu thêm",
+"price_include": "Giá đã bao gồm",
+"carriage": "Xe đưa đón",
+"round_trip": "Đưa đón khứ hồi",
+"high_speed": "Tàu hỏa tốc độ cao",
+"tour_guide": "Hướng dẫn viên du lịch",
+"thai_english": "Hướng dẫn viên du lịch biết nói tiếng Thái - Anh",
+"meal": "Bữa ăn",
+"light_breakfast": "Bữa sáng nhẹ",
+"lunch_option": "Bữa trưa theo lựa chọn (có lựa chọn chay)",
+"service_supple": "Dịch vụ/phụ trội",
+"divine_mask": "Mặt nạ lặn và áo phao",
+"admission_fee": "Phí vào cửa",
+"insurance_provide": "Bảo hiểm do nhà điều hành cung cấp",
+"soft_drink": "Nước ngọt",
+"seasonal_fruits": "Trái cây theo mùa",
+"cake_and_snack": "Giá không bao gồm bánh và đồ ăn nhẹ",
+"other_personal": "Chi phí cá nhân khác",
+"tip": "Tiền boa",
+"voucher_validity": "Hiệu lực của phiếu dịch vụ",
+"use_selected_date": "Sử dụng vào ngày đã chọn",
+"valid_normally": "Hiệu lực hàng ngày",
+"valid_holiday": "Hiệu lực vào mọi ngày lễ",
+"conversion_method": "Phương pháp chuyển đổi",
+"do_not_need_book": "Bạn không cần đặt trước khi đến",
+"input_directly": "Nhập trực tiếp",
+"after_confirming": "Sau khi xác nhận đặt chỗ, bạn có thể xem phiếu dịch vụ trên trang đặt chỗ của tôi hoặc qua email",
+"when_coming": "Khi đến, chỉ cần trình diện phiếu dịch vụ trên điện thoại cho nhân viên ở cửa để hoàn tất",
+"no_need_print_card": "Không cần in thẻ thanh toán",
+"just_present_electronic": "Chỉ cần trình diện vé điện tử/thẻ thanh toán trên điện thoại khi chuyển đổi hoặc khi nhập cửa. Vui lòng điều chỉnh độ sáng màn hình phù hợp."
 }
