--- a/src/languages/cn.json
+++ b/src/languages/cn.json
@@ -277,5 +277,81 @@
   "picture_video": "图片和视频",
   "link_youtube": "YouTube链接",
   "link_tiktok": "TikTok链接",
-  "name": "名称"
+  "name": "名称",
+  "tour_by_topic": "按主题进行旅游",
+"emigrate": "移民",
+"world": "世界",
+"find_recommend_tour": "查找推荐的旅游",
+"package_tour_aboard": "海外套餐旅游",
+"discover_package_family": "发现家庭5D4D套餐旅游！！",
+"themed_tour": "主题旅游",
+"discover_tour_youlove": "发现您喜欢的旅游类型",
+"travel_around_world": "环游世界",
+"discover_more_tour": "发现更多旅游",
+"the_place_discovery": "这些地方值得探索",
+"dosmestic_destination": "国内目的地",
+"international_destination": "国际目的地",
+"watch_the_most": "观看您想旅行的地方最生动的视频",
+"lastest_tour": "最新的旅游日期",
+"hour": "小时",
+"ticket_option": "票选项",
+"see_detail": "查看详情",
+"easy_refund": "轻松退款",
+"easy_reschedule": "轻松重新安排",
+"select_ticket": "选择票",
+"trip_highlight": "旅行亮点",
+"tour_schedule": "旅游行程",
+"find_tour": "找到旅游",
+"best_price_from": "最佳价格来自",
+"room_information": "房间信息",
+"little_convenient": "稍微方便",
+"price_detail": "价格明细",
+"room_rate": "房间价格",
+"taxes_and_fees": "税费",
+"total": "总计",
+"request_to_book": "请求预订",
+"room_detail": "房间详情",
+"book": "预订",
+"contact_detail": "联系方式",
+"choose_time": "选择时间",
+"use_coupon": "使用优惠券",
+"adult": "成人",
+"children": "儿童",
+"add_number_guest": "添加客人数量",
+"adult_year_old": "成人 (12-60 岁)",
+"children_year_old": "儿童 (4-11 岁)",
+"things_need_to_know": "需要知道的事情",
+"inexperienced": "无经验",
+"inseparable": "分不开",
+"no_reservation": "没有预订",
+"include_addition": "包括额外费用",
+"price_include": "价格包含",
+"carriage": "车辆",
+"round_trip": "往返班车",
+"high_speed": "高速列车",
+"tour_guide": "导游",
+"thai_english": "会说泰语 - 英语的导游",
+"meal": "餐食",
+"light_breakfast": "简易早餐",
+"lunch_option": "午餐可选式（提供素食选择）",
+"service_supple": "服务/补充",
+"divine_mask": "潜水面罩和救生衣",
+"admission_fee": "门票费",
+"insurance_provide": "由经营者提供的保险",
+"soft_drink": "软饮料",
+"seasonal_fruits": "时令水果",
+"cake_and_snack": "蛋糕和零食价格不包括",
+"other_personal": "其他个人费用",
+"tip": "小费",
+"voucher_validity": "凭证有效期",
+"use_selected_date": "使用选择的日期",
+"valid_normally": "通常每天有效",
+"valid_holiday": "每个假期有效",
+"conversion_method": "转换方法",
+"do_not_need_book": "您不需要在到达前预订",
+"input_directly": "直接输入",
+"after_confirming": "确认预订后，您可以在我的预订页面或通过电子邮件查看服务凭证",
+"when_coming": "到达时，只需在电话上提交服务给入口处的工作人员",
+"no_need_print_card": "无需打印付款卡",
+"just_present_electronic": "当转换或进入门时，只需在手机上展示电子票证/付款卡。请调整适当的屏幕亮度。"
 }
