--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -281,5 +281,81 @@
   "picture_video": "Gambar dan video",
   "link_youtube": "Pautan YouTube",
   "link_tiktok": "Pautan TikTok",
-  "name": "Nama"
+  "name": "Nama",
+  "tour_by_topic": "Lawatan mengikut topik",
+"emigrate": "Beremigrasi",
+"world": "Dunia",
+"find_recommend_tour": "Cari Lawatan yang Dicadangkan",
+"package_tour_aboard": "Pakej lawatan luar negara",
+"discover_package_family": "Temui pakej lawatan keluarga 5D4D !!",
+"themed_tour": "Lawatan bertemakan",
+"discover_tour_youlove": "Temui jenis lawatan yang anda suka",
+"travel_around_world": "Melancong merata dunia",
+"discover_more_tour": "Temui lebih banyak lawatan",
+"the_place_discovery": "Tempat-tempat sangat berharga untuk ditemui",
+"dosmestic_destination": "Destinasi domestik",
+"international_destination": "Destinasi antarabangsa",
+"watch_the_most": "Tonton video paling hidup tentang tempat yang anda ingin lawati",
+"lastest_tour": "Tarikh lawatan terkini",
+"hour": "Jam",
+"ticket_option": "Pilihan tiket",
+"see_detail": "Lihat butiran",
+"easy_refund": "Pengembalian wang mudah",
+"easy_reschedule": "Penjadualan semula mudah",
+"select_ticket": "Pilih tiket",
+"trip_highlight": "Tumpuan perjalanan",
+"tour_schedule": "Jadual lawatan",
+"find_tour": "Cari lawatan",
+"best_price_from": "Harga terbaik dari",
+"room_information": "Maklumat Bilik",
+"little_convenient": "Kurang Selesa",
+"price_detail": "Perincian Harga",
+"room_rate": "Kadar Bilik",
+"taxes_and_fees": "Cukai dan Yuran",
+"total": "Jumlah",
+"request_to_book": "Permintaan untuk MENYEWA",
+"room_detail": "Perincian Bilik",
+"book": "BUKU",
+"contact_detail": "Butiran Hubungan",
+"choose_time": "Pilih Masa",
+"use_coupon": "Guna Kupon",
+"adult": "Dewasa",
+"children": "Kanak-kanak",
+"add_number_guest": "Tambah bilangan tetamu",
+"adult_year_old": "Dewasa (12-60 tahun)",
+"children_year_old": "Kanak-kanak (4-11 tahun)",
+"things_need_to_know": "Perkara yang perlu anda tahu",
+"inexperienced": "Tidak berpengalaman",
+"inseparable": "Tidak dapat dipisahkan",
+"no_reservation": "Tiada tempahan",
+"include_addition": "Termasuk caj tambahan",
+"price_include": "Harga termasuk",
+"carriage": "Kereta",
+"round_trip": "Perjalanan pulang-pergi",
+"high_speed": "Kereta api laju",
+"tour_guide": "Pemandu pelancong",
+"thai_english": "Pemandu pelancong yang bertutur dalam Bahasa Thai - Inggeris",
+"meal": "Makanan",
+"light_breakfast": "Sarapan ringan",
+"lunch_option": "Pilihan makan tengah hari (pilihan vegetarian disediakan)",
+"service_supple": "Perkhidmatan/Tambahan",
+"divine_mask": "Topeng penyelaman dan jaket keselamatan",
+"admission_fee": "Bayaran masuk",
+"insurance_provide": "Insurans disediakan oleh pengendali",
+"soft_drink": "Minuman ringan",
+"seasonal_fruits": "Buah-buahan musim",
+"cake_and_snack": "Harga kek dan snek tidak termasuk",
+"other_personal": "Perbelanjaan peribadi lain",
+"tip": "Tip",
+"voucher_validity": "Kesahan baucar",
+"use_selected_date": "Guna pada tarikh yang dipilih",
+"valid_normally": "Sah pada hari biasa",
+"valid_holiday": "Sah pada setiap cuti",
+"conversion_method": "Kaedah penukaran",
+"do_not_need_book": "Anda tidak perlu membuat tempahan sebelum tiba",
+"input_directly": "Input terus",
+"after_confirming": "Selepas mengesahkan tempahan, anda boleh melihat baucar perkhidmatan di laman tempahan saya atau melalui emel",
+"when_coming": "Apabila tiba, serahkan sahaja perkhidmatan di telefon kepada kakitangan di pintu masuk",
+"no_need_print_card": "Tidak perlu mencetak kad pembayaran",
+"just_present_electronic": "Cukup tunjukkan tiket/ kad pembayaran elektronik pada telefon apabila ditukar atau masuk pintu. Sila atur kecerahan skrin yang sesuai."
 }
